tests/ui/imports/issue-37887.edition2021.stderr
error[E0658]: use of unstable library feature `test`
  --> $DIR/issue-37887.rs:6:5
   |
LL |     extern crate test;
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #50297 <https://github.com/rust-lang/rust/issues/50297> for more information
   = help: add `#![feature(test)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `test`
  --> $DIR/issue-37887.rs:7:9
   |
LL |     use test::*;
   |         ^^^^
   |
   = note: see issue #50297 <https://github.com/rust-lang/rust/issues/50297> for more information
   = help: add `#![feature(test)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
